--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 										<div class="inner">
 											<ul class="feature-icons">	
 												<li>
-													<a href="#four">
+													<a href="#five">
 														<button class="button primary icon fa-envelope-open fit">Contact form</button>
 													</a>
 												</li>
