--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 											👋 Hiring managers and recruiters, inquiries should go through <a href="#five">my contact form—go to the form</a>.
 										  Please allow me to get to know you. As a general rule, I don't respond to unknown phone numbers, and 
 											don't reply to cold emails until I've gotten to know them better. 
-											The contact form allows me to sort through inquiries best. Word document version of resume available upon request. 
+											The contact form allows me to sort through inquiries best. A Word document version of resume available upon request. 
 											Thank you!
 										</p>
 										<div class="inner hide-résumé">
