--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 										<p class="bio-section">
 											👋 Hiring managers and recruiters, inquiries should go through <a href="#five">my contact form—go to the form</a>.
 										  Please allow me to get to know you. As a general rule, I don't respond to unknown phone numbers, and 
-											don't reply to cold emails until I've gotten to know them better. 
+											don't reply to cold emails until I've gotten to know the person before hand. 
 											The contact form allows me to sort through inquiries best. A Word document version of resume available upon request. 
 											Thank you!
 										</p>
