fix: reword text for resume section

--- a/index.html
+++ b/index.html
@@ -165,8 +165,8 @@
 										</p>
 										<p class="bio-section">
 											👋 Hiring managers and recruiters, inquiries should go through <a href="#five">my contact form—go to the form</a>.
-										  Please allow me to get to know you. As a general rule, I don't respond to unknown phone numbers, and 
-											don't reply to cold emails until I've gotten to know the person before hand. 
+										  Please allow me to get to know you. As a general rule, I don't respond to unknown phone numbers and 
+											cold emails until I've gotten to know the person beforehand. 
 											The contact form allows me to sort through inquiries best. A Word document version of resume available upon request. 
 											Thank you!
 										</p>
