feat: update inquiries wording

--- a/index.html
+++ b/index.html
@@ -164,10 +164,11 @@
 											I appreciate that you've read this far and would love to chat with you. 
 										</p>
 										<p class="bio-section">
-											👋 Hiring managers and recruiters, inquiries should go through <a href="#five">my contact form—go to the form</a>.
+											👋 Hiring managers and recruiters, inquiries should go through <a href="#five">my contact form — submit the form</a>.
 										  Please allow me to get to know you. As a general rule, I don't respond to unknown phone numbers and 
 											cold emails until I've gotten to know the person beforehand. 
-											The contact form allows me to sort through inquiries best. A Word document version of resume available upon request. 
+											The contact form allows me to sort through inquiries best. 
+											A Word document version of my resume is available upon request. 
 											Thank you!
 										</p>
 										<div class="inner hide-résumé">
