fix: rearrange wording of resume section

--- a/index.html
+++ b/index.html
@@ -165,9 +165,10 @@
 										</p>
 										<p class="bio-section">
 											👋 Hiring managers and recruiters, inquiries should go through <a href="#five">my contact form — submit the form</a>.
-										  Please allow me to get to know you. As a general rule, I don't respond to unknown phone numbers and 
+										  As a general rule, I don't respond to unknown phone numbers and 
 											cold emails until I've gotten to know the person beforehand. 
-											The contact form allows me to sort through inquiries best. 
+											Please allow me to get to know you via the form because
+											the contact form allows me to sort through inquiries best then reach out to you. 
 											A Word document version of my resume is available upon request. 
 											Thank you!
 										</p>
