--- a/index.html
+++ b/index.html
@@ -168,7 +168,9 @@
 										  As a general rule, I don't respond to unknown phone numbers and 
 											cold emails until I've gotten to know the person beforehand. 
 											Please allow me to get to know you via the form because
-											the contact form allows me to sort through inquiries best then reach out to you. 
+											the contact form allows me to sort through inquiries best then reach out to you.
+										</p>
+										<p class="bio-section">
 											A Word document version of my resume is available upon request. 
 											Thank you!
 										</p>
