fix: alter resume and skills sections

--- a/index.html
+++ b/index.html
@@ -154,21 +154,22 @@
 										</p>
 										<p class="bio-section">
 											I've been in IT for over nine years and have worked as a web developer for over six years. 
-											I've worked with JavaScript for over four years, and within React for over three years. 
+											I've worked with JavaScript for over four years, and with React for over three years. 
 											I wanted to gain a full-stack skill set, so I attended a Back-End Coding Bootcamp to learn 
 											Node JS and MySQL in combination with React.
 										</p>
 										<h3 id="resume">View My Resume</h3>
-										<p class="bio-section">
-											Please review my portfolio and resume below to see some of my projects. 
-											I appreciate that you've read this far and would love to chat with you. 
+										<h4 class="bio-section">
+											👋 Hiring managers and recruiters!
+										</h4>
+										<p>Inquiries should go through <a href="#five">my contact form</a>.
+										  As a general rule, I don't respond to unknown phone numbers and 
+											cold emails. Please allow me to get to know you via the form 
+											to sort through inquiries then reach out to you.
 										</p>
 										<p class="bio-section">
-											👋 Hiring managers and recruiters, inquiries should go through <a href="#five">my contact form — submit the form</a>.
-										  As a general rule, I don't respond to unknown phone numbers and 
-											cold emails until I've gotten to know the person beforehand. 
-											Please allow me to get to know you via the form because
-											the contact form allows me to sort through inquiries best then reach out to you.
+											Please review my portfolio and resume to see some of my projects. 
+											I appreciate that you've read this far and would love to chat with you. 
 										</p>
 										<p class="bio-section">
 											A Word document version of my resume is available upon request. 
@@ -202,17 +203,17 @@
 													<li class="fa-react" aria-hidden="true">React JS</li>
 													<li class="fa-node-js" aria-hidden="true">Node JS</li>
 													<li class="fa-cog" aria-hidden="true">Express JS</li>
-													<li class="fa-js-square" aria-hidden="true">JavaScript</li>
+													<li class="fa-js-square" aria-hidden="true">ES6 JavaScript</li>
 													<li class="fa-book" aria-hidden="true">Storybook</li>
 													<li class="fa-caret-down" aria-hidden="true">Jest</li>
 													<li class="fa-docker" aria-hidden="true">Docker</li>
 													<li class="fa-user" aria-hidden="true">Jenkins</li>
 													<li class="fa-ship" aria-hidden="true">Spinnaker</li>
-													<li class="fa-database" aria-hidden="true">SQL</li>
+													<li class="fa-database" aria-hidden="true">MySQL</li>
 													<li class="fa-git-alt" aria-hidden="true">Git</li>
 													<li class="fa fa-keyboard-o" aria-hidden="true">Vim</li>
 													<li class="fa-css3-alt" aria-hidden="true">CSS3</li>
-													<li class="fa-sass" aria-hidden="true">SASS</li>
+													<li class="fa-sass" aria-hidden="true">Sass</li>
 													<li class="fa-bootstrap" aria-hidden="true">Bootstrap</li>
 													<li class="fa-html5" aria-hidden="true">HTML5</li>
 												</ul>
