fix: add bio-section id

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 										<h4 class="bio-section">
 											👋 Hiring managers and recruiters!
 										</h4>
-										<p>Inquiries should go through <a href="#five">my contact form</a>.
+										<p class="bio-section">Inquiries should go through <a href="#five">my contact form</a>.
 										  As a general rule, I don't respond to unknown phone numbers and 
 											cold emails. Please allow me to get to know you via the form 
 											to sort through inquiries then reach out to you.
