fix: add bio-section id

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 										<p class="bio-section">I'm excited to share with you some things about me, 
 											what I can do, and have created, plus some comments from other engineers.
 										</p>
-										<p>Please browse below and contact me via 
+										<p class="bio-section">Please browse below and contact me via 
 											<a href="#five">the form at the bottom of this page</a>, 
 											<a href="https://twitter.com/techieEliot" target="_blank">Twitter</a>, 
 											<a href="https://www.linkedin.com/in/techieeliot/" target="_blank">LinkedIn</a>,or 
