fix: adjust buttons on mobile
- update resume content and bio section

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<title>Eliot Sanford's Portfolio</title>
 		<meta name="title" content="Eliot Sanford's Portfolio">
 		<meta name="description" content="Eliot Sanford
-		Senior React Front-End Software Engineer
+		Front-End Software Engineer
 		
 		
 		
@@ -30,7 +30,7 @@
 		<meta property="og:url" content="https://techieeliot.com/">
 		<meta property="og:title" content="Eliot Sanford's Portfolio">
 		<meta property="og:description" content="Eliot Sanford
-		Senior React Front-End Software Engineer
+		Front-End Software Engineer
 		
 		
 		
@@ -46,7 +46,7 @@
 		<meta property="twitter:url" content="https://techieeliot.com/">
 		<meta property="twitter:title" content="Eliot Sanford's Portfolio">
 		<meta property="twitter:description" content="Eliot Sanford
-		Senior React Front-End Software Engineer	
+		Front-End Software Engineer	
 		Welcome to my portfolio page!">
 		<meta property="twitter:image"
 			content="https://techieeliot.com/images/eliot-sanford-react-software-engineer.png"> 
@@ -64,14 +64,14 @@
 					<h1 id="logo">
 						<a href="#banner">Eliot Sanford</a>
 					</h1>
-					<p class="monospace">React Software Engineer</p>
+					<p class="monospace">Front-End Software Engineer</p>
 				</header>
 				<nav id="nav">
 					<ul>
-						<li><a href="#one" class="active">Things About Me</a></li>
-						<li><a href="#two">Things I Can Do</a></li>
-						<li><a href="#three">Things I Have Created</a></li>
-						<li><a href="#four">Things Developers Have Said</a></li>
+						<li><a href="#one" class="active">About Me</a></li>
+						<li><a href="#two">Skills</a></li>
+						<li><a href="#three">Projects</a></li>
+						<li><a href="#four">Testimonials</a></li>
 						<li><a href="#five">Contact Me</a></li>
 						<li><a href="#resume">View my Resume</a></li>
 					</ul>
@@ -102,8 +102,7 @@
 								<div class="container">
 									<header class="major">
 										<h2>Eliot Sanford</h2>
-										<p class="monospace">Senior React Front-End
-										Software Engineer</p>
+										<p class="monospace">Front-End Software Engineer</p>
 										<br>
 										<br>
 									</header>
@@ -147,16 +146,11 @@
 												</li>
 											</ul>
 										</div>
-										<h3 id="one">Things About Me</h3>
+										<h3 id="one">About Me</h3>
 										<p class="bio-section">
-											I'm currently seeking a full-time React Front-End Software Engineer role 
-											and work as an senior engineer at IDEMIA and previously at Lowes.com as a React.js software engineer.
-										</p>
+											I'm currently seeking a full-time Front-End Software Engineer role where I can build greenfield Next.js projects.										</p>
 										<p class="bio-section">
-											I've been in IT for over nine years and have worked as a web developer for over six years. 
-											I've worked with JavaScript for over four years, and with React for over three years. 
-											I wanted to gain a full-stack skill set, so I attended a Back-End Coding Bootcamp to learn 
-											Node JS and MySQL in combination with React.
+											I have more than five years of front-end engineering experience with React.js. I absolutely love building Next.js applications from the ground up. I'm passionate about giving the most engaging, remarkable user experiences. I thrives in product-focused teams, collaborating with design, engineering, and product teams to ship features that make life better for my users.
 										</p>
 										<h3 id="resume">View My Resume</h3>
 										<h4 class="bio-section">
@@ -194,7 +188,7 @@
 							<!-- TWO -->
 							<section id="two">
 								<div class="container">
-									<h3>Things I Can Do</h3>
+									<h3>Skills</h3>
 									<div class="features">
 										<article>
 											<a href="#" class="image"><img src="images/pic00.jpg" alt="web development books next to a small cactus" /></a>
@@ -226,19 +220,46 @@
 							<!-- THREE -->
 							<section id="three">
 								<div class="container">
-									<h3>Things I Have Created</h3>
+									<h3>Projects</h3>
 									<div class="features">
 										<article>
 											<span class="image"><img src="images/pic01.jpg" alt="hands on a mac laptop keyboard shot from above" /></span>
 											<div class="inner">
-												<h4>React JS & Node JS Sites</h4>
+												<h4>Next.js and React.js Sites</h4>
 												<p>I've poured out my heart and soul into these handful of projects.</p>
 												</p>
 												<ul class="feature-icons">
 													<li class="fa-react">
-														<a href="https://fourthparty.app/" target="_blank">Fourth Party</a>
+														<a href="https://www.guardianlife.com/products/dental-insurance/comparison?zipcode=10001&primary_age=19&planCode=diamond&product=dental" target="_blank" rel="noopener noreferrer">
+															Startup Plan Cards
+														</a>
 													</li>
 													<li class="fa-react">
+														<a href="https://www.guardianlife.com/individuals-families/shop/login" target="_blank" rel="noopener noreferrer">
+															Startup Portal
+														</a>
+													</li>
+													<li class="fa-react">
+														<a href="https://dentalexchange.guardiandirect.com/" target="_blank" rel="noopener noreferrer">
+															Startup Exchange
+														</a>
+													</li>
+													<li class="fa-react">
+														<a href="https://tsaenrollmentbyidemia.tsa.dhs.gov/programs/precheck?utm_campaign=WT-TSA+%7C+Enrollment+-+TIER+3+(NEW)+MX_Conv+%7C+POR-00349-25-00000077&utm_source=google_ads_search_direct&utm_medium=Application+-+T3&utm_term=tsa%20online%20application&gad_source=1&gclid=Cj0KCQiA8q--BhDiARIsAP9tKI1UvFX8KALyt6rXCXDJ2JVa6bawTCAihYryggcETHXzQ6xf634OXikaArOkEALw_wcB&gclsrc=aw.ds" target="_blank" rel="noopener noreferrer">
+															Enrollment Form
+														</a>
+													</li>
+													<li class="fa-react">
+														<a href="https://www.lowes.com/pd/vevor-Commercial-Cotton-Candy-Machine-Electric-Floss-Maker-900W-for-Family-and-Various-Party-20-5-Inch-Pink/5014072563" target="_blank" rel="noopener noreferrer">
+															eCommerce Product
+														</a>
+													</li>
+													<li class="fa-react">
+														<a href="https://dashboard.fourthparty.app/login" target="_blank" rel="noopener noreferrer">
+															CRM Dashboard
+														</a>
+													</li>
+													<!-- <li class="fa-react">
 														<a href="https://trivia-game-techieeliot.netlify.app/" target="_blank">Trivia Game</a>
 													</li>
 													<li class="fa-react">
@@ -246,11 +267,11 @@
 													</li>
 													<li class="fa-react">
 														<a href="https://markdown-editor-techieeliot.netlify.app" target="_blank">Markdown Previewer</a>
-													</li>
+													</li> -->
 													<!-- <li class="fa-react">
 														<a href="https://countries-techieeliot.netlify.app" target="_blank">Countries + Weather APIs</a>
 													</li> -->
-													<li class="fa-react">
+													<!-- <li class="fa-react">
 														<a href="https://phonebook-techieeliot.netlify.app" target="_blank">Phonebook App</a>
 													</li>
 													<li class="fa-react">
@@ -258,7 +279,7 @@
 													</li>
 													<li class="fa-react">
 														<a href="https://unicafe-techieeliot.netlify.app" target="_blank">Feedback App</a>
-													</li>
+													</li> -->
 													<!-- <li class="fa-react">
 														<a href="https://thebikerapp.site" target="_blank">The Biker App<br>Work In Progress</a>
 													</li>
@@ -274,7 +295,7 @@
 												</ul>
 											</div>
 										</article>
-										<article>
+										<!-- <article>
 											<span class="image">
 												<img src="images/pic02.jpg" alt="man with colorful socks seated in a chair crossed-legged reading javascript & jquery" />
 											</span>
@@ -295,24 +316,24 @@
 													<li class="fa-js-square">
 														<a href="https://ms-coding-to-do-list.netlify.app/" target="_blank">To-Do List</a>
 													</li>
-													<!-- <li class="fa-database">
+													<li class="fa-database">
 														<a href="https://github.com/techieeliot/legendary-palm-tree" target="_blank">SQL CRUD Files</a>
-													</li> -->
+													</li>
 												</ul>
 											</div>
-										</article>
-										<article>
+										</article> -->
+										<!-- <article>
 											<span class="image"><img src="images/pic03.jpg" alt="stack of books with html & css book at the bottom" /></span>
 											<div class="inner">
 												<h4>Pure HTML and CSS Sites</h4>
 												<p>I have mastered pure HTML and CSS through teaching others the basics.</p>
 												<ul class="feature-icons">
-													<!-- <li class="fa-dollar-sign">
+													<li class="fa-dollar-sign">
 														<a href="https://devsouth.us" target="_blank">jQuery devSouth Consulting, LLC</a>
 													</li>
 													<li class="fa-stream">
 														<a href="https://github.com/techieeliot/mentors-scaling-garbanzo" target="_blank">Tailwind CSS Example Page</a>
-													</li> -->
+													</li>
 													<li class="fa-css3">
 														<a href="https://freecodecampjxn.github.io/flexbox-example/" target="_blank">CSS Flexbox freeCodeCamp Jackson, MS</a>
 													</li>
@@ -321,7 +342,7 @@
 													</li>
 												</ul>
 											</div>
-										</article>
+										</article> -->
 										<!-- <article>
 											<span class="image"><img src="images/pic04.jpg" alt="WordPress on a computer screen" /></span>
 											<div class="inner">
@@ -377,7 +398,7 @@
 							<section id="four">
 								<div class="container">
 									<div class="inner">
-										<h3>Things Developers Have Said</h3>
+										<h3>Recommendations from other developers</h3>
 										<blockquote>
 											<p>
 												Eliot is a highly motivated developer and problem solver with an above average ability to learn quickly. I've worked
