fix: change intro content

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 										<p class="bio-section">
 											I'm currently seeking a full-time Front-End Software Engineer role where I can build greenfield Next.js projects.										</p>
 										<p class="bio-section">
-											I have more than five years of front-end engineering experience with React.js. I absolutely love building Next.js applications from the ground up. I'm passionate about giving the most engaging, remarkable user experiences. I thrives in product-focused teams, collaborating with design, engineering, and product teams to ship features that make life better for my users.
+											I have more than five years of front-end engineering experience with React.js. I absolutely love building Next.js applications from the ground up. I'm passionate about building the most engaging, remarkable user experiences. I thrive in product-focused teams, collaborating with design, engineering, and product teams to ship features that make life better for my users.
 										</p>
 										<h3 id="resume">View My Resume</h3>
 										<h4 class="bio-section">
